fix `text-decoration` not showing on webkit browsers

--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -196,7 +196,8 @@ mark {
 }
 
 abbr[title] {
-	text-decoration: dotted underline;
+	-webkit-text-decoration: underline currentColor dotted;
+	text-decoration: underline currentColor dotted;
 	cursor: help;
 }
 
